# gesta-py

./: LICENSE  README-sucio.txt  README.md  fix_tutorial.py  gesta_tutorial.ipynb  gesta_tutorial.py  main.py  pyproject.toml
gesta/: __init__.py  gesta.py
gesta/core/: __init__.py  entities.py  validators.py
gesta/extensions/: __init__.py  wellness.py
gesta/managers/: __init__.py  calendar.py  reports.py  transactions.py
scripts/: demo.py
tests/: conftest.py  test_calendar.py  test_entities.py  test_transactions.py
